--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,11 @@
             android:name=".activity.ListaUsuarioActivity"
             android:label="@string/title_activity_lista_usuario"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.CadastroTreinadorActivity"></activity>
+        <activity android:name=".activity.CadastroTreinadorActivity" />
+        <activity
+            android:name=".activity.ListaTreinadorActivity"
+            android:label="@string/title_activity_lista_treinador"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
