--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:value="FindGym.db" />
         <meta-data
             android:name="VERSION"
-            android:value="3" />
+            android:value="4" />
         <meta-data
             android:name="QUERY_LOG"
             android:value="true" />
@@ -41,7 +41,8 @@
         <activity
             android:name=".activity.ListaTreinadorActivity"
             android:label="@string/title_activity_lista_treinador"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.CadastroModalidadeActivity"></activity>
     </application>
 
 </manifest>
