ListView de Modalidade com a função editar e excluir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".activity.ListaModalidadeActivity"
             android:label="@string/title_activity_lista_modalidade"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.CadastrotreinoActivity"></activity>
     </application>
 
 </manifest>
