Removendo o listview de Modalidade, deixando somente a tela de cadastro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:name=".activity.ListaModalidadeActivity"
             android:label="@string/title_activity_lista_modalidade"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.CadastrotreinoActivity"></activity>
+        <activity android:name=".activity.CadastroTreinoActivity"></activity>
     </application>
 
 </manifest>
